# empty

./: E2.csv  README.md  __init__.py  data.py  environment.gpu.yml  environment.yml  eval.py  exp6_translation.csv  frames.csv  model.py  predict.py  pyproject.toml  train.py  utils.py
scripts/: submit_train.slurm
